# kalman-so

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  protoc.sh
src/: main.cc
src/SSLLogClient/: SSLLogClient.cc  SSLLogClient.hh
src/SSLLogClient/modules/gui/: gui.cc  gui.hh
src/SSLLogClient/modules/kalmanfilter/: kalmanfilter.cc  kalmanfilter.hh
src/SSLLogClient/modules/lifetime/: lifetime.cc  lifetime.hh
src/SSLLogClient/modules/logreader/: logreader.cc  logreader.hh
src/SSLLogClient/modules/tracker/: ball.hh  object.cc  object.hh  robot.hh  trackeddetection.cc  trackeddetection.hh
src/SSLLogClient/types/: balldata.hh  robotdata.hh  worlddata.cc  worlddata.hh
